--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>
-            
+            My 1st webpage
         </title>
     </head>
     <body>
-
+        <p>This is a test paragraph</p>
     </body>
 </html>
