--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <h5>heading 5</h5>
         <h6>heading 6</h6>
         </ol>
-        
+        <p><b>this </b><i>is italic </i>and <em>emphasized</em> text</p>
+        <p>this is an<ins> inserted text</ins></p>
+        <hr>
+        <p>this is a <sup>superscripted </sup>text</p>
+        <p>this is a <sub>subscripted </sub>text</p>
+        <p>this is a <del>deleted </del> text </p>
+        <!--
+            https://www.w3schools.com/html/html_formatting.asp
+        -->
     </body>
 </html>
