--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
         <p>this is a <sub>subscripted </sub>text</p>
         <p>this is a <del>deleted </del> text </p>
         <!--
+            text formatting in html
             https://www.w3schools.com/html/html_formatting.asp
+        -->
+        <ol>
+            <li>apple</li>
+            <li>orange</li>
+        </ol>
+            <li>nice</li>
+            <li>great</li>
+        </li>
+        <!--
+            lists in html
+            https://www.w3schools.com/html/html_lists.asp
         -->
     </body>
 </html>
