--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
             lists in html
             https://www.w3schools.com/html/html_lists.asp
         -->
+        <img src="https://images.unsplash.com/photo-1608585268933-47b0cc723cd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="unsplash pic is not available " width="420" height="280" align="center">
     </body>
 </html>
