--- a/index.html
+++ b/index.html
@@ -21,21 +21,36 @@
         <p>this is a <sup>superscripted </sup>text</p>
         <p>this is a <sub>subscripted </sub>text</p>
         <p>this is a <del>deleted </del> text </p>
-        <!--
+        <!-- 
             text formatting in html
-            https://www.w3schools.com/html/html_formatting.asp
-        -->
+            https://www.w3schools.com/html/html_formatting.asp -->
+        
         <ol>
             <li>apple</li>
             <li>orange</li>
         </ol>
+        <ul>
             <li>nice</li>
             <li>great</li>
-        </li>
+        </ul>
         <!--
             lists in html
             https://www.w3schools.com/html/html_lists.asp
         -->
-        <img src="https://images.unsplash.com/photo-1608585268933-47b0cc723cd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="unsplash pic is not available " width="420" height="280" align="center">
+        <img src="https://images.unsplash.com/photo-1608585268933-47b0cc723cd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
+        alt="unsplash pic is not available " width="420" height="280" align="center">
+        <form>
+            <p>username<input type="text" name="" id=""></p>
+            <p>stay sing in <input type="checkbox"></p>
+            <p>under 18<input type="radio" name="age"></p>
+            <p>over 18<input type="radio" name="age"></p>
+            <p>select your favour: 
+                <select name="" id="">
+                    <option value="">pizzad</option>
+                    <option value="">ice cream</option>
+                    <option value="">juice</option>
+                </select>
+            </p>
+        </form> 
     </body>
 </html>
