--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <option value="">juice</option>
                 </select>
             </p>
+            <input type="submit" value="click it">
         </form> 
     </body>
 </html>
