--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
         -->
         <img src="https://images.unsplash.com/photo-1608585268933-47b0cc723cd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
         alt="unsplash pic is not available " width="420" height="280" align="center">
+        <!--align="right"-->
+        <br>
+        <br>
+        <br>
         <form>
             <p>username<input type="text" name="" id=""></p>
             <p>stay sing in <input type="checkbox"></p>
-            <p>under 18<input type="radio" name="age"></p>
+            <p>under 18<input type="radio" name="age" checked></p>
             <p>over 18<input type="radio" name="age"></p>
             <p>select your favour: 
                 <select name="" id="">
@@ -52,6 +56,29 @@
                 </select>
             </p>
             <input type="submit" value="click it">
+            <br>
+            <table>
+                <thead>
+                    <tr>
+                        <th align="left">name</th>
+                        <th>favourite color</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>mustafa</td>
+                        <td>red</td>
+                    </tr>
+                    <tr>
+                        <td>jahn</td>
+                        <td>blue</td>
+                    </tr>
+                    <tr>
+                        <td>jahn smith</td>
+                        <td>purple</td>
+                    </tr>
+                </tbody>
+            </table>
         </form> 
     </body>
 </html>
