--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             https://www.w3schools.com/html/html_lists.asp
         -->
         <img src="https://images.unsplash.com/photo-1608585268933-47b0cc723cd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
-        alt="unsplash pic is not available " width="420" height="280" align="center">
+        alt="unsplash pic is not available " width="420" height="280" >
         <!--align="right"-->
         <br>
         <br>
@@ -78,7 +78,10 @@
                         <td>purple</td>
                     </tr>
                 </tbody>
+                
             </table>
+            <p><a href="https://www.google.com">click to go to google</a></p>
+            <a href="https://www.google.com"><img src="C:\Users\MustafaZamani\Desktop\123.jpg" alt=""></a>
         </form> 
     </body>
 </html>
