--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 
             </table>
             <p><a href="https://www.google.com">click to go to google</a></p>
-            <a href="https://www.google.com"><img src="C:\Users\MustafaZamani\Desktop\123.jpg" alt=""></a>
+            <a href="https://www.facebook.com/mustafazamani91"><img src=".\img\123.jpg" alt="" width="200px"></a>
         </form> 
     </body>
 </html>
